# Left4Translate

./: .gitignore  CHANGELOG.md  Left4Translate-gui.spec  Left4Translate.spec  README.md  build.bat  gui_main.py  pyproject.toml  requirements.txt  test_log.txt
.github/workflows/: bump-version.yml
ci/: github-actions-ci.yml
config/: config.sample.json  slang_es.sample.json
docs/: architecture.md  requirements.md  setup.md  voice_translation.md
gui/: __init__.py  app.py  crash_guard.py  dashboard_tab.py  engine_controller.py  gc_guard.py  log_handler.py  logs_tab.py  main_window.py  overlay_window.py  settings_store.py  settings_tab.py  stream_capture.py  styles.py  theme.py  tray.py  voice_tab.py  widgets.py
plans/: improvement-plan.md  improvement-suggestions.md
res/: make_icon.py
scripts/: dev_setup.py
src/: main.py  version.py
src/audio/: __init__.py  speech_to_text.py  voice_recorder.py  voice_translation_manager.py
src/config/: __init__.py  config_manager.py
src/display/: __init__.py  screen_controller.py  turing_display.py
src/input/: __init__.py  mouse_handler.py
src/reader/: __init__.py  message_reader.py
src/tools/: __init__.py  list_audio_devices.py  test_chat_regex.py  test_config.py  test_log_regex.py  test_log_translation.py  test_message_reader.py  test_name_slang.py  test_screen.py  test_slang_translation.py  test_translation.py  test_translation_live.py
src/translator/: __init__.py  translation_service.py
src/utils/: __init__.py  clipboard_manager.py
tests/: conftest.py  test_bug_regressions.py  test_chat_regex.py  test_crash_guard.py  test_engine_screen_voice.py  test_gc_guard.py  test_gui.py  test_m4_features.py  test_no_scroll_widgets.py  test_settings_combos.py  test_settings_save_safety.py  test_slang_translation.py  test_stop_path.py  test_translation_service.py  test_voice_pipeline.py  test_voice_screen_guard.py
