[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "left4translate"
version = "1.2.7"
description = "Real-time chat translation for Left 4 Dead 2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.bumpversion]
current_version = "1.2.7"
commit = false
tag = false
message = "Bump version: {current_version} → {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "src/main.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "v{current_version}"
replace = "v{new_version}"
